<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Komodo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_item_viewer">ItemViewer</string>
    <string name="title_activity_products_view">ProductsView</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="confPassword">Confirm Password</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="postcode">Postcode</string>
    <string name="town">Town or City</string>
    <string name="register">Register</string>

</resources>
